syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.netease.cloud.nsf.demo.stock.service";
option java_outer_classname = "HelloWorldService";

// The greeting service definition.
service Simple {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc Add (AddRequest) returns (AddReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddReply {
    int32 result = 1;
}